--- a/2010.html
+++ b/2010.html
@@ -113,8 +113,8 @@
         .star-image {
             position: absolute;
             right: 3px;
-            width: auto;
-            height: 100%;
+            width: 100%;
+            height: auto;
             z-index: 1;
         }
 
